// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceDrawer view it renders a Contents view when the router query has an iri 1`] = `
<DocumentFragment>
  <section
    class="PodBrowser-drawer PodBrowser-drawer--open"
  >
    <div
      class="PodBrowser-drawer__content"
    >
      <div
        class="PodBrowser-drawer__content-wrapper"
      >
        <div
          class="PodBrowser-drawer__article"
        >
          <button
            class="PodBrowser-button PodBrowser-button--text"
          >
            <span
              class="PodBrowser-icon-cancel"
            />
             Close
          </button>
        </div>
        <section
          class="PodBrowser-headerSection"
        >
          <h3
            class="PodBrowser-content-h3"
            data-testid="resource-title"
            title="/iri/"
          >
            iri
          </h3>
        </section>
        <hr
          class="PodBrowser-root"
        />
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
            data-testid="accordion-resource-actions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content PodBrowser-expanded"
            >
              Actions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-entered"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      />
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--danger"
                          data-testid="delete-resource-button"
                          type="button"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-details-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Details
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <section
                      class="PodBrowser-centeredSection"
                    >
                      <ul
                        class="PodBrowser-root PodBrowser-padding"
                      >
                        <li
                          class="PodBrowser-root PodBrowser-gutters"
                        >
                          <p
                            class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
                          >
                            Thing Type:
                          </p>
                          <p
                            class="PodBrowser-root PodBrowser-typeValue PodBrowser-detailText PodBrowser-body1"
                          >
                            text/turtle
                          </p>
                        </li>
                      </ul>
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-permissions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Permissions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--prompt"
                          data-testid="permissions-add-user-with-webid-button"
                          type="button"
                        >
                          Add with WebId
                        </button>
                      </li>
                    </ul>
                    <div
                      class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
                    >
                      <div
                        aria-disabled="false"
                        aria-expanded="true"
                        class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="PodBrowser-content PodBrowser-expanded"
                        >
                          Individual permissions
                        </div>
                        <div
                          aria-disabled="false"
                          aria-hidden="true"
                          class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
                        >
                          <span
                            class="PodBrowser-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="PodBrowser-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </span>
                          <span
                            class="PodBrowser-root"
                          />
                        </div>
                      </div>
                      <div
                        class="PodBrowser-container PodBrowser-entered"
                        style="min-height: 0px;"
                      >
                        <div
                          class="PodBrowser-wrapper"
                        >
                          <div
                            class="PodBrowser-wrapperInner"
                          >
                            <div
                              role="region"
                            >
                              <div
                                class="PodBrowser-root PodBrowser-details"
                              >
                                <div
                                  class="PodBrowser-root PodBrowser-colorPrimary PodBrowser-indeterminate"
                                  role="progressbar"
                                  style="width: 40px; height: 40px;"
                                >
                                  <svg
                                    class="PodBrowser-svg"
                                    viewBox="22 22 44 44"
                                  >
                                    <circle
                                      class="PodBrowser-circle PodBrowser-circleIndeterminate"
                                      cx="44"
                                      cy="44"
                                      fill="none"
                                      r="20.2"
                                      stroke-width="3.6"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ResourceDrawer view it renders a loading view when context has no iri 1`] = `
<DocumentFragment>
  <section
    class="PodBrowser-drawer PodBrowser-drawer--open"
  >
    <div
      class="PodBrowser-drawer__content"
    >
      <div
        class="PodBrowser-drawer__content-wrapper"
      >
        <div
          class="PodBrowser-drawer__article"
        >
          <button
            class="PodBrowser-button PodBrowser-button--text"
          >
            <span
              class="PodBrowser-icon-cancel"
            />
             Close
          </button>
        </div>
        <section
          class="PodBrowser-headerSection"
        >
          <h3
            class="PodBrowser-content-h3"
            data-testid="resource-title"
            title="/iri/"
          >
            iri
          </h3>
        </section>
        <hr
          class="PodBrowser-root"
        />
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
            data-testid="accordion-resource-actions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content PodBrowser-expanded"
            >
              Actions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-entered"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      />
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--danger"
                          data-testid="delete-resource-button"
                          type="button"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-details-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Details
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <section
                      class="PodBrowser-centeredSection"
                    >
                      <ul
                        class="PodBrowser-root PodBrowser-padding"
                      >
                        <li
                          class="PodBrowser-root PodBrowser-gutters"
                        >
                          <p
                            class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
                          >
                            Thing Type:
                          </p>
                          <p
                            class="PodBrowser-root PodBrowser-typeValue PodBrowser-detailText PodBrowser-body1"
                          >
                            text/turtle
                          </p>
                        </li>
                      </ul>
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-permissions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Permissions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--prompt"
                          data-testid="permissions-add-user-with-webid-button"
                          type="button"
                        >
                          Add with WebId
                        </button>
                      </li>
                    </ul>
                    <div
                      class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
                    >
                      <div
                        aria-disabled="false"
                        aria-expanded="true"
                        class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="PodBrowser-content PodBrowser-expanded"
                        >
                          Individual permissions
                        </div>
                        <div
                          aria-disabled="false"
                          aria-hidden="true"
                          class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
                        >
                          <span
                            class="PodBrowser-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="PodBrowser-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </span>
                          <span
                            class="PodBrowser-root"
                          />
                        </div>
                      </div>
                      <div
                        class="PodBrowser-container PodBrowser-entered"
                        style="min-height: 0px;"
                      >
                        <div
                          class="PodBrowser-wrapper"
                        >
                          <div
                            class="PodBrowser-wrapperInner"
                          >
                            <div
                              role="region"
                            >
                              <div
                                class="PodBrowser-root PodBrowser-details"
                              >
                                <div
                                  class="PodBrowser-root PodBrowser-colorPrimary PodBrowser-indeterminate"
                                  role="progressbar"
                                  style="width: 40px; height: 40px;"
                                >
                                  <svg
                                    class="PodBrowser-svg"
                                    viewBox="22 22 44 44"
                                  >
                                    <circle
                                      class="PodBrowser-circle PodBrowser-circleIndeterminate"
                                      cx="44"
                                      cy="44"
                                      fill="none"
                                      r="20.2"
                                      stroke-width="3.6"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ResourceDrawer view it renders without errors when iri contains spaces 1`] = `
<DocumentFragment>
  <section
    class="PodBrowser-drawer PodBrowser-drawer--open"
  >
    <div
      class="PodBrowser-drawer__content"
    >
      <div
        class="PodBrowser-drawer__content-wrapper"
      >
        <div
          class="PodBrowser-drawer__article"
        >
          <button
            class="PodBrowser-button PodBrowser-button--text"
          >
            <span
              class="PodBrowser-icon-cancel"
            />
             Close
          </button>
        </div>
        <section
          class="PodBrowser-headerSection"
        >
          <h3
            class="PodBrowser-content-h3"
            data-testid="resource-title"
            title="/iri/"
          >
            iri
          </h3>
        </section>
        <hr
          class="PodBrowser-root"
        />
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="true"
            class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
            data-testid="accordion-resource-actions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content PodBrowser-expanded"
            >
              Actions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-entered"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      />
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--danger"
                          data-testid="delete-resource-button"
                          type="button"
                        >
                          Delete
                        </button>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-details-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Details
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <section
                      class="PodBrowser-centeredSection"
                    >
                      <ul
                        class="PodBrowser-root PodBrowser-padding"
                      >
                        <li
                          class="PodBrowser-root PodBrowser-gutters"
                        >
                          <p
                            class="PodBrowser-root PodBrowser-detailText PodBrowser-body1"
                          >
                            Thing Type:
                          </p>
                          <p
                            class="PodBrowser-root PodBrowser-typeValue PodBrowser-detailText PodBrowser-body1"
                          >
                            text/turtle
                          </p>
                        </li>
                      </ul>
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="PodBrowser-root PodBrowser-root PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
        >
          <div
            aria-disabled="false"
            aria-expanded="false"
            class="PodBrowser-root PodBrowser-root"
            data-testid="accordion-resource-permissions-trigger"
            role="button"
            tabindex="0"
          >
            <div
              class="PodBrowser-content"
            >
              Permissions
            </div>
            <div
              aria-disabled="false"
              aria-hidden="true"
              class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-edgeEnd"
            >
              <span
                class="PodBrowser-label"
              >
                <svg
                  aria-hidden="true"
                  class="PodBrowser-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
              <span
                class="PodBrowser-root"
              />
            </div>
          </div>
          <div
            class="PodBrowser-container PodBrowser-hidden"
            style="min-height: 0px;"
          >
            <div
              class="PodBrowser-wrapper"
            >
              <div
                class="PodBrowser-wrapperInner"
              >
                <div
                  role="region"
                >
                  <div
                    class="PodBrowser-root PodBrowser-accordionDetails"
                  >
                    <ul
                      class="PodBrowser-action-menu"
                    >
                      <li
                        class="PodBrowser-action-menu__item"
                      >
                        <button
                          class="PodBrowser-action-menu__trigger PodBrowser-action-menu__trigger--prompt"
                          data-testid="permissions-add-user-with-webid-button"
                          type="button"
                        >
                          Add with WebId
                        </button>
                      </li>
                    </ul>
                    <div
                      class="PodBrowser-root PodBrowser-root PodBrowser-expanded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
                    >
                      <div
                        aria-disabled="false"
                        aria-expanded="true"
                        class="PodBrowser-root PodBrowser-root PodBrowser-expanded"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="PodBrowser-content PodBrowser-expanded"
                        >
                          Individual permissions
                        </div>
                        <div
                          aria-disabled="false"
                          aria-hidden="true"
                          class="PodBrowser-root PodBrowser-root PodBrowser-expandIcon PodBrowser-expanded PodBrowser-edgeEnd"
                        >
                          <span
                            class="PodBrowser-label"
                          >
                            <svg
                              aria-hidden="true"
                              class="PodBrowser-root"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                              />
                            </svg>
                          </span>
                          <span
                            class="PodBrowser-root"
                          />
                        </div>
                      </div>
                      <div
                        class="PodBrowser-container PodBrowser-entered"
                        style="min-height: 0px;"
                      >
                        <div
                          class="PodBrowser-wrapper"
                        >
                          <div
                            class="PodBrowser-wrapperInner"
                          >
                            <div
                              role="region"
                            >
                              <div
                                class="PodBrowser-root PodBrowser-details"
                              >
                                <div
                                  class="PodBrowser-root PodBrowser-colorPrimary PodBrowser-indeterminate"
                                  role="progressbar"
                                  style="width: 40px; height: 40px;"
                                >
                                  <svg
                                    class="PodBrowser-svg"
                                    viewBox="22 22 44 44"
                                  >
                                    <circle
                                      class="PodBrowser-circle PodBrowser-circleIndeterminate"
                                      cx="44"
                                      cy="44"
                                      fill="none"
                                      r="20.2"
                                      stroke-width="3.6"
                                    />
                                  </svg>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ResourceDrawer view renders a specific error message if resource fails with 403 1`] = `
<DocumentFragment>
  <section
    class="PodBrowser-drawer PodBrowser-drawer--open"
  >
    <div
      class="PodBrowser-drawer__content"
    >
      <div
        class="PodBrowser-drawer__content-wrapper"
      >
        <div
          class="PodBrowser-drawer__article"
        >
          <button
            class="PodBrowser-button PodBrowser-button--text"
          >
            <span
              class="PodBrowser-icon-cancel"
            />
             Close
          </button>
        </div>
        <div
          class="PodBrowser-message PodBrowser-message--error"
        >
          <p>
            You do not have access to this resource.
          </p>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ResourceDrawer view renders an error message if resource fails to load 1`] = `
<DocumentFragment>
  <section
    class="PodBrowser-drawer PodBrowser-drawer--open"
  >
    <div
      class="PodBrowser-drawer__content"
    >
      <div
        class="PodBrowser-drawer__content-wrapper"
      >
        <div
          class="PodBrowser-drawer__article"
        >
          <button
            class="PodBrowser-button PodBrowser-button--text"
          >
            <span
              class="PodBrowser-icon-cancel"
            />
             Close
          </button>
        </div>
        <div
          class="PodBrowser-message PodBrowser-message--error"
        >
          <p>
            We had a problem loading the resource.
          </p>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
